updated env variables for enhanced security

--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
     // Firebase configuration (replace with your Firebase project config)
     const firebaseConfig = {
         apiKey: "YOUR_API_KEY",
-        authDomain: "YOUR_AUTH_DOMAIN",
-        projectId: "YOUR_PROJECT_ID",
-        storageBucket: "YOUR_STORAGE_BUCKET",
-        messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-        appId: "YOUR_APP_ID"
+        authDomain: "your-project-id.firebaseapp.com",
+        projectId: "your-project-id.firebaseapp.com"
+        // storageBucket: "YOUR_STORAGE_BUCKET",
+        // messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+        // appId: "YOUR_APP_ID"
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
