firebaseconfig syntax corrected

--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-        apiKey: "FIREBASE_API_KEY",
-        authDomain: "FIREBASE_AUTH_DOMAIN",
-        projectId: "FIREBASE_PROJECT_ID"
+        apiKey: "YOUR_API_KEY",
+        authDomain: "your-project-id.firebaseapp.com",
+        projectId: "your-project-id"
         // storageBucket: "agecalculator-6d153.firebasestorage.app",
         // messagingSenderId: "999362485187",
         // appId: "1:999362485187:web:77390040abb3c9d6843b76"
