deploy: fdbbb957cc7a89ff78a3742104ebf305de60cd01

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSP commented out to preserve UI: <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.gstatic.com https://your-username.github.io 'unsafe-eval'; connect-src 'self' https://www.google.com https://accounts.google.com;"> -->
-    <title>Age Calculator - Manual Fix</title>
+    <!-- CSP commented out to preserve UI -->
+    <title>Age Calculator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -201,10 +201,10 @@
 <script type="module">
     // Firebase configuration (with placeholders)
     const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "your-project-id.firebaseapp.com",
-        projectId: "your-project-id"
-        // appId: "your-app-id"
+        apiKey: "AIzaSyB6-gLp_JMkRPD6fbboLu8b0Kr1F1LhNx0",
+        authDomain: "agecalculator-6d153.firebaseapp.com",
+        projectId: "agecalculator-6d153",
+        appId: "your-app-id"
     };
     // Import Firebase
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
@@ -214,18 +214,23 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // Handle Google Sign-In
+    // Handle Google Sign-In with popup check
     document.getElementById('signInButton').addEventListener('click', () => {
-        console.log('Button clicked'); // Debug log
+        console.log('Button clicked');
         const provider = new GoogleAuthProvider();
         signInWithPopup(auth, provider)
             .then((result) => {
+                console.log('Sign-in successful:', result.user);
                 document.getElementById('loginContainer').style.display = 'none';
                 document.getElementById('appContainer').style.display = 'block';
             })
             .catch((error) => {
                 console.error('Sign-in error:', error);
-                alert('Failed to sign in: ' + error.message);
+                if (error.code === 'auth/popup-blocked') {
+                    alert('Popup blocked by browser. Please allow popups for this site and try again.');
+                } else {
+                    alert('Failed to sign in: ' + error.message);
+                }
             });
     });
 
