--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
         apiKey: "YOUR_API_KEY",
         authDomain: "your-project-id.firebaseapp.com",
         projectId: "your-project-id",
-        appId: "YOUR_APP_ID" // Updated placeholder
+        storageBucket: "YOUR_STORAGE_BUCKET",
+        messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+        appId: "YOUR_APP_ID"
     };
     // Import Firebase
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
