Test dev deployment - add (Dev) to title

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <button id="signInButton">Sign in with Google</button>
 </div>
 <div id="appContainer">
-    <h1>Age Calculator</h1>
+    <h1>Age Calculator (Dev)</h1>
     <p class="warning">Do not use real names or sensitive data. Data is stored locally in your browser.</p>
 
     <div id="entriesContainer"></div>
