--- a/dev/index.html
+++ b/dev/index.html
@@ -139,6 +139,15 @@
             border-radius: 3px;
             margin: 5px 2px;
         }
+        .hide-btn {
+            background: #ff9800;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 3px;
+            margin: 5px 2px;
+        }
         .warning {
             color: red;
             font-weight: bold;
